Fix dark mode for seashells and goa

--- a/src/css/games/seashells.less
+++ b/src/css/games/seashells.less
@@ -2,6 +2,18 @@ html[data-theme=dark].vgincLib_thematic_background_on {
 	background: #000;
 }
 
+html[data-theme=dark].boardlessVariant {
+	#token-stocks .bga-cards_card-sides {
+		filter: var(--ext-bright);
+	}
+}
+
+html[data-theme=dark]:not(.boardlessVariant) {
+	#beach-board {
+		filter: var(--ext-bright);
+	}
+}
+
 html[data-theme=dark] {
 	.player-table {
 		background-color: var(--dark-back-50);
@@ -11,9 +23,21 @@ html[data-theme=dark] {
 		filter: var(--drop-shadow);
 	}
 
+	#score-sheet {
+		background: var(--dark-back);
+		border-radius: 1em;
+		color: var(--light-70);
+	}
+
+	.bga-score-sheet_sheet tr:not(:last-child) {
+		box-shadow: 0 6px 2px -4px #ffffff1a;
+	}
+
 	.player-components .player-mat,
-	#token-stocks .bga-cards_card-sides,
-	.card-stock .bga-cards_card-sides,
+	#shapes-cards-deck .bga-cards_card-sides,
+	#colors-cards-deck .bga-cards_card-sides,
+	#cards-line .bga-cards_card-sides,
+	#scoring-card .bga-cards_card-sides,
 	.vgincLib_tooltipBody .bga-cards_card-sides {
 		filter: var(--ext-bright);
 	}
